# SophiaGL

./: CMakeLists.txt  LICENSE  README.md
shaders/: Billboard.fragmentshader  Billboard_2D.vertexshader  Billboard_3D.vertexshader  Billboard_fix.vertexshader  Billboard_vert.vertexshader  Color.fragmentshader  DepthRTT.fragmentshader  DepthRTT.vertexshader  NormalMapping.fragmentshader  NormalMapping.vertexshader  Particle.fragmentshader  Particle.vertexshader  Passthrough.fragmentshader  Passthrough.vertexshader  PassthroughMVP.fragmentshader  PassthroughMVP.vertexshader  ShadowMapping.fragmentshader  ShadowMapping.vertexshader  StandardShading.fragmentshader  StandardShading.vertexshader  TextVertexShader.fragmentshader  TextVertexShader.vertexshader  Transform.vertexshader  WobblyTexture.fragmentshader
src/: main.cpp
src/demo/: billboard_demo.cpp  normal_mapping_demo.cpp  particle_demo.cpp  pick_by_bullet_demo.cpp  pick_by_color_demo.cpp  pick_by_udf_demo.cpp  rotation_demo.cpp  shadow_map_demo.cpp  standard_demo.cpp  wood_demo.cpp
src/include/: debug  demo
src/include/camera/: Camera  RotateCamera  StaticCamera
src/include/gl_objs/: GLBuffer  GLDraw  GLFrame  GLHeader  GLObj  GLShader
src/include/scene/: Light  (+10 more)
src/scene/: BillboardToolModel.cpp  Material.cpp  NormalMappingModel.cpp  ParticleToolModel.cpp  PassthroughMvpToolModel.cpp  Spirit.cpp  StandardModel.cpp  TextToolModel.cpp  VertexColorToolModel.cpp  VertexTextureToolModel.cpp  WindowManager.cpp
src/tools/: callback_helper.cpp  obj_loader.cpp  quaternion.cpp  shader_loader.cpp  texture_loader.cpp
(+7 files in other folders)
